Split solutions out into their own files. Review workshop 2.

--- a/C_Y1/workshop2/Workshop 2_solns.ipynb
+++ b/C_Y1/workshop2/Workshop 2_solns.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:4f290003297e665496d10ae31d74326250ba108270a0878469365e28814b17c3"
+  "signature": "sha256:e7f34edbb9a567e6aa4b10829d66b59d5addc68bd98adb068a10fb896ab472a8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1867,7 +1867,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "data=loadtxt('zn_flame.txt')\n",
+      "conc_data = data[:,0]\n",
+      "abs_data = data[:, 1:]"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1882,7 +1886,12 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "mean_abs = mean(abs_data, axis=1)\n",
+      "\n",
+      "plot(conc_data, mean_abs, linestyle='', marker='o')\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1897,7 +1906,12 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "std_e = std(abs_data, ddof=1, axis=1)/len(data)**0.5\n",
+      "\n",
+      "errorbar(conc_data, mean_abs, yerr=std_e, linestyle='')\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1912,7 +1926,14 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "m,c = polyfit(conc_data, mean_abs, 1, w=1/std_e**2)\n",
+      "predicted_abs_data = conc_data*m+c\n",
+      "\n",
+      "plot(conc_data, predicted_abs_data, linestyle='--')\n",
+      "plot(conc_data, mean_abs, linestyle='', marker='o')\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1929,7 +1950,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "residuals = predicted_abs_data - mean_abs\n",
+      "errorbar(conc_data, residuals, linestyle='', marker='o', yerr=std_e)\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1944,7 +1969,9 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "(0.119-c)/m"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1976,7 +2003,27 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "%pylab inline"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data = loadtxt('interesting_data.txt')\n",
+      "lemons = data[:,0]\n",
+      "fatalities = data[:,1]\n",
+      "\n",
+      "p,cov=polyfit(lemons,fatalities,1,cov=True)\n",
+      "m,c=p\n",
+      "plot(lemons, fatalities, linestyle='', marker='o')\n",
+      "plot(lemons, lemons*m+c,linestyle='--')\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1985,8 +2032,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<p style=\"text-decoration:underline\" title=\"US highway Fatality Rate per 100,000 vs. &#13; Fresh Lemons imported to the US from Mexico / metric tons  &#13;  &#13;\n",
-      "Source: Stephen R. Johnson; J. Chem. Inf. Model.\u00a0 2008, 48, 25-26\">Mouse over to learn what you've just plotted</p>"
+      "<span style=\"text-decoration:underline\" title=\"US highway Fatality Rate per 100,000 vs. &#13; Fresh Lemons imported to the US from Mexico / metric tons  &#13;  &#13;\n",
+      "Source: Stephen R. Johnson; J. Chem. Inf. Model.\u00a0 2008, 48, 25-26\">Mouse over to learn what you've just plotted</span>"
      ]
     },
     {
@@ -1995,6 +2042,14 @@
      "source": [
       "Look at the uncertainty reported for the coefficients and comment on the nature of relationship between the two variables - do you think our linear model is a good fit for the data?"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
