Minor corrections to workshop 3.

--- a/C_Y1/workshop3/Workshop 3.ipynb
+++ b/C_Y1/workshop3/Workshop 3.ipynb
@@ -96,8 +96,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -122,8 +121,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -140,7 +138,7 @@
       "We filtered data based on value\n",
       "\n",
       "    temp = test_data[:,0]\n",
-      "    testdata[temp<=360]"
+      "    test_data[temp<=360]"
      ]
     },
     {
@@ -165,6 +163,9 @@
      "source": [
       "And learned to use polyfit to extract coefficients defining a straight line:\n",
       "\n",
+      "    filtered_temp=test_data[:,0]\n",
+      "    filtered_pressure=test_data[:,1]\n",
+      "    \n",
       "    polyfit(filtered_temp, filtered_pressure, 1, cov=True)"
      ]
     },
@@ -556,8 +557,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -577,8 +577,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -597,8 +596,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -625,8 +623,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -645,8 +642,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 23
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -666,8 +662,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 25
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -691,8 +686,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 24
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -709,8 +703,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 25
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -730,8 +723,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 26
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -748,8 +740,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 27
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -771,8 +762,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 28
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -796,8 +786,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 31
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -826,8 +815,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 32
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -861,8 +849,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 33
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -891,8 +878,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 36
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -917,8 +903,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 34
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -935,8 +920,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 37
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -956,8 +940,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 38
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -977,8 +960,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 39
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -998,8 +980,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 39
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1019,8 +1000,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 39
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1031,7 +1011,7 @@
       "    figure(figsize=(10,7.5))\n",
       "    ax = gca(projection='3d')\n",
       "    p=ax.plot_surface(X_data, Y_data, Z_data, rstride=3, cstride=3, cmap=cm.hot)\n",
-      "    fig.colorbar(p, shrink=0.5)\n",
+      "    colorbar(p, shrink=0.5)\n",
       "    show()"
      ]
     },
@@ -1041,8 +1021,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 39
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1070,8 +1049,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 39
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1093,8 +1071,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 39
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -1125,8 +1102,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 39
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1167,8 +1143,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 39
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1191,8 +1166,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 41
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -1234,8 +1208,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 41
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -1264,8 +1237,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 43
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1291,8 +1263,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 43
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1324,8 +1295,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 41
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1391,8 +1361,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 41
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1447,8 +1416,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1465,8 +1433,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1481,8 +1448,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "heading",
