Minor tweaks to workshop 3 A posterori corrections to exercise 1 Updated notes Transformed exercise 1 data files to dos format

--- a/C_Y1/exercises1/exercise1_solns.ipynb
+++ b/C_Y1/exercises1/exercise1_solns.ipynb
@@ -57,9 +57,11 @@
      "source": [
       "In this exercise we'll be dealing with larger datasets, such as those you could have obtained from an automatic measuring instrument, and looking at some statistical properties of sets of measurements.\n",
       "\n",
-      "The file [measurements.csv](files/measurements.csv) contains 5 columns of data corresponding to 100,000 repeated measurements of the same system in an identical state using 5 different measuring instruments (good thing we don't have to analyse this data by hand!)\n",
+      "The file [measurements.csv](files/measurements.csv) contains the data we will be analysing in these exercises. (**Note** a .csv file is a text file and you can treat it in an identical fashion to a .txt file.) \n",
       "\n",
-      "* Have a peek at the file and load its data into a variable. Output the value of the variable to see how the imported data looks like."
+      "The file contains 5 columns of data corresponding to 100,000 repeated measurements of the same system using 5 different measuring instruments (good thing we don't have to analyse this data by hand!)\n",
+      "\n",
+      "* Have a look at the file (using a text editor e.g. notepad) and load its data into a variable. Output the value of the variable to see how the imported data looks like."
      ]
     },
     {
@@ -79,9 +81,9 @@
      "source": [
       "A quick and informative way of acquiring an overall view of the data distribution is to plot histograms.\n",
       "\n",
-      "* On the same figure, plot the histograms of all 5 sets of data labelling each of them (make sure the figure is of reasonable size and a legend is present). \\*\n",
-      "\n",
-      "\\* A better visualisation is obtained by setting the range for each histogram to be equal, and setting the transparency alpha value to less than 1 so that we see through superimposed histograms."
+      "* On the same figure, plot 5 histograms of 100 bins for each of the 5 sets of data.\n",
+      "* Label the figure and make sure the it is of reasonable size and a legend is present.\n",
+      "* Set the *range* keyword of each histogram to be equal such that all histograms are visible, and set the transparency *alpha* keyword to a value less than 1."
      ]
     },
     {
@@ -113,7 +115,7 @@
       "\n",
       "The *standard deviation* $s_x$ quantifies the spread of the experimental measurements about its mean value. (It corresponds to the average error of a single measurement. When writing up experiments you will often report the mean of some set of measurements +/- some error value, it is important to note that the standard deviation is *not* this error value - below we will examine what this error is in more detail.)\n",
       "\n",
-      "* For each instrument's 100,000 measurements, calculate the mean and the standard deviation (don't forget to set the appropriate *ddof* value). \n",
+      "* For each of the 5 datasets, calculate the mean and the standard deviation (don't forget to set the appropriate *ddof* value). \n",
       "\n",
       "* How do the $\\bar{x}$ and $s_x$ values relate the shape of the distributions in the histograms?\n",
       "\n",
@@ -177,9 +179,9 @@
      "source": [
       "We will now study how some statistical properties vary with sample size.\n",
       "\n",
-      "* For the data from the first measuring instrument, construct three histograms on a single figure - one with all 100,000 measurements, one for the first 10,000 measurements, and another for the first 1,000 measurements.\n",
+      "* For the 1st dataset, construct three histograms on a single figure - one with all 100,000 measurements, one for the first 10,000 measurements, and another for the first 1,000 measurements.\n",
       "\n",
-      "* Change the figure so that are normalized by sample size (you will need to use the built in tools to discover the appropriate keyword of function **hist** to achieve this).\n",
+      "* Change the figure so that the histograms are normalized (you will need to use the built in tools to discover the appropriate keyword of function **hist** to achieve this).\n",
       "\n",
       "By looking at these three histograms, and by calculating their means and standard deviations, what do you notice about how much the mean value, and the standard deviation change as the sample size grows? (Bear in mind that all these sample sizes are fairly large.)"
      ]
@@ -231,7 +233,9 @@
       "\n",
       "Let us investigate how this quantity varies with sample size. We will be considering data from instruments 1 and 4, these have similar mean value as you should see in your histograms above.\n",
       "\n",
-      "* For datasets 1 and 4 pick 5 sample sizes between 1000 and 100,000 and produce a plot showing how the standard deviation and the standard error change as sample size is varied. (You may want to use a logarithmic scale in this plot.)\n",
+      "* For datasets 1 and 4, choose 5 sample sizes between 1000 and 100,000 calculate the standard deviation and the standard error.\n",
+      "\n",
+      "* For the two datasets above, plot the standard deviation and standard error against the sample size. (You may want to use a logarithmic *y* scale in this plot.)\n",
       "\n",
       "* What does this plot tell you about the usefulness of repeating the same measurement?"
      ]
@@ -516,11 +520,15 @@
       "\n",
       "where $E_a$ is activation energy, $A$ is the so called pre-exponential factor (which is related to the frequency of molecular collisions) and $R$ is the ideal gas constant.\n",
       "\n",
-      "* Create an appropriate function that through non linear fitting will allow us to extract the pre-exponential factor and the rate constant.\n",
+      "* Create an appropriate function that through non linear fitting will allow us to extract the pre-exponential factor and the activation energy.\n",
       "\n",
-      "* From the rate constant values on the table above, and the rate constant value you have determined, fit the data to the determine the pre-exponential factor and the activation energy for this reaction.\\* \n",
+      "* From the rate constant values on the table above, and the rate constant value you have determined, fit the data to the determine the pre-exponential factor and the activation energy for this reaction. \n",
       "\n",
-      "\\* Notice that the uncertainties associated with each rate constant are different, you should take this into account."
+      "* Plot values predicted from your fitted function alongside the experimental values to visualise your result.\n",
+      "\n",
+      "*Note 1*: The uncertainties associated with each rate constant are different, you should take this into account. \n",
+      "\n",
+      "*Note 2*: Units of temperature must be consistent with units of R."
      ]
     },
     {
@@ -603,7 +611,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For those having difficulties finding a suitable initial guess for the non-linear Arrhenius fit, or if you managed to extract your activation energy quickly try a different approach:\n",
+      "If you are having difficulties finding a suitable initial guess for the non-linear Arrhenius fit, or if you managed to extract your activation energy quickly try a different approach:\n",
       "\n",
       "The Arrhenius equation is a non-linear function of $T$, but can be converted into a linear form by taking the natural logarithm of both sides of the equation:\n",
       "\n",
