--- a/C_Y1/workshop3/Workshop 3.ipynb
+++ b/C_Y1/workshop3/Workshop 3.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:dff1b5b3999e9c5af66128ba6bc2aa0b06f0c9d956d5bddfee1f216c96193626"
+  "signature": "sha256:17400f5816ad9b4b0518405cde5bbf6ccbf435afe7ccf71d3868a75d4c64b425"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -138,7 +138,8 @@
       "We filtered data based on value\n",
       "\n",
       "    temp = test_data[:,0]\n",
-      "    test_data[temp<=360]"
+      "    filtered_data = test_data[temp<=360]\n",
+      "    filtered_data"
      ]
     },
     {
@@ -163,8 +164,8 @@
      "source": [
       "And learned to use polyfit to extract coefficients defining a straight line:\n",
       "\n",
-      "    filtered_temp=test_data[:,0]\n",
-      "    filtered_pressure=test_data[:,1]\n",
+      "    filtered_temp=filtered_data[:,0]\n",
+      "    filtered_pressure=filtered_data[:,1]\n",
       "    \n",
       "    polyfit(filtered_temp, filtered_pressure, 1, cov=True)"
      ]
@@ -1422,7 +1423,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Create a figure with the surface defined by this function. Define your grid using x and y values that range from 0.2 to 4. Use ax.set_zlim() to set z-axis viewing window, ax.view_init to set the camera angle, as well as setting the rstride, cstride, and cmap keywords such that you get the following figure: \n",
+      "Create a figure with the surface defined by this function. Define your grid using x and y values that range from 0.35 to 4. Use ax.set_zlim() to set z-axis viewing window, ax.view_init to set the camera angle, as well as setting the rstride, cstride, and cmap keywords such that you get the following figure: \n",
       "    \n",
       "<img src=\"files/leps.png\" />"
      ]
