Pre-emptive changes of exercise 2 & solns Conversion of .dat files to dos format

--- a/C_Y1/exercises2/exercise2.ipynb
+++ b/C_Y1/exercises2/exercise2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4ba98692fa8b09eff19cb1804a542d1c94fe65c390a5d74dac7dd68a7bd762d3"
+  "signature": "sha256:1914abe53ff064e13a6e102c55bcba06898c9ed109e83eac4f0dded41c641d77"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -85,7 +85,7 @@
       "* Plot the experimental data and the fitted curve on the same figure to check the fit is sensible.\n",
       "* Determine the area under the peak\n",
       "\n",
-      "\\*For convenience the fitting function *gly_intensity* is given bellow."
+      "\\*For convenience the fitting function *gly_intensity* is given below."
      ]
     },
     {
@@ -139,7 +139,7 @@
       "\n",
       "* Use this to produce several plots of $g2(x)$ against *x* using different values of the parameters to identify the effect of the parameters on the curve.\n",
       "\n",
-      "* Create a plot of *g2* as a function of both *x* and *d* simultaneously."
+      "* Use a 3d plot or a projected plot to visualise *g2* as a function of both *x* and *d* simultaneously."
      ]
     },
     {
@@ -178,7 +178,7 @@
      "source": [
       "With the exception of the peak centered at around 340 nm and the broad less intense peak centred around 475 nm (which are due to different phenomena occuring during the experiment), all other peaks form what is called a vibronic progression of the anthracene molecule.\n",
       "\n",
-      "* Plot the wavelength corresponding to the centre of each of the peaks in the anthracene vibronic progression against a simple integer index and comment on your result.\n",
+      "* Plot the wavelength corresponding to the centre of each of the peaks of anthracene against peak number counting from lower wavelengths and comment on your result.\n",
       "\n",
       "The results you have obtained relate to the vibration of the molecule -you will learn much more about this phenomena later on during the degree."
      ]
@@ -199,6 +199,14 @@
       "\n",
       "Now that you are capturing both sets of vibronic progressions you can now produce two plots of the wavelengths vs. an integer index for the two progressions."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
