Really committed changes to workshop 1
Also commited changes to workshop 2

--- a/C_Y1/workshop2/Workshop 2_solns.ipynb
+++ b/C_Y1/workshop2/Workshop 2_solns.ipynb
@@ -166,7 +166,7 @@
      "source": [
       "**arange** creates arrays of equally spaced numbers where we specify the initial value, a stop value (that will not be included), and the interval size:\n",
       "    \n",
-      "    arange(0, 10, 1)"
+      "    arange(0, 20, 2)"
      ]
     },
     {
@@ -181,9 +181,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "And we can refer to elements of the data in an array by using square brackets and the index of the element we want. Remembering the the first element corresponds to index zero.\n",
+      "We can refer to elements of the data in an array by using square brackets and the index of the element we want. Remembering the the first element corresponds to index zero.\n",
       "\n",
-      "    arange(0,10,1)[0]"
+      "    my_1d_array = arange(0,20,2)\n",
+      "    my_1d_array[0]"
      ]
     },
     {
@@ -198,7 +199,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    arange(0,10,1)[5]"
+      "    my_1d_array[5]"
      ]
     },
     {
@@ -213,10 +214,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can also refer to slices of the data using a syntax similar to arange where a colon is used in place of the comma.\n",
+      "We can also refer to subsets of the data by providing two indices separated by a colon:\n",
       "\n",
-      "    my_array = arange(0,10,1)\n",
-      "    my_array[0:10:3]"
+      "    my_1d_array[0:5]"
      ]
     },
     {
@@ -231,15 +231,31 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Thus the above slice takes the zeroth (first) element of my_array and then every 3rd element up to but not including 10.\n",
+      "Thus the above slice takes element 0 of my_1d_array **up to but not including** element 5.\n",
       "\n",
-      "If the first index is omitted, it will start at the zeroth index.\n",
-      "If the second index is omitted we move up to but not including the N+1th element\n",
-      "If the third index is omitted the step size is 1 i.e we include all elements between the first index and the second index - 1\n",
+      "* If the first index is omitted, the subset will start at the zeroth index.\n",
+      "* If the second index is omitted the subset will extend to the last element\n",
       "\n",
       "Thus\n",
-      "    \n",
-      "    my_array[::]"
+      "\n",
+      "    my_1d_array[:]"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We can choose to omit certain elements in our subset by using a second colon and a step size\n",
+      "\n",
+      "    my_1d_array[0:10:2]"
      ]
     },
     {
@@ -272,26 +288,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Where indices now refer to the indidual rows:\n",
+      "The format for selecting elements from a 2d array is:  \n",
+      "\n",
+      "**<span style='color:green'>array_name</span> [ <span style='color:blue'>row_indices</span> <span style='color:red;font-     weight:bold'>,</span> <span style='color:blue'>column_indices</span> ]**\n",
+      "\n",
+      "\n",
+      "E.g. to select all rows and from them the columns from index 2 up to but not including index 4 would be: \n",
       "    \n",
-      "    my_2d_array[1]"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "We can apply the same indexing mechanism as we did for 1d array except we use a comma to seperate the indexing that refers to the rows and the indexing that refers to the columns. E.g. to select every column of the rows from index 2 upto but not including index 4 would be: \n",
-      "    \n",
-      "    my_2d_array[2:4,:]"
+      "    my_2d_array[:,2:4]"
      ]
     },
     {
@@ -357,12 +361,75 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can plot using the **plot** command which accepts many keywords, and display using the **show** command\n",
+      "We can plot using the **plot** command which accepts many keywords, and display using the **show** command. First we'll create some arrays:\n",
       "\n",
       "    age = arange(10)\n",
       "    p_human = age**2\n",
-      "    p_badger = age**3\n",
-      "\n",
+      "    p_badger = age**3"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    age"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    p_human"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    p_badger"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Now we will plot the arrays we have created:\n",
+      "    \n",
       "    plot(age, p_human, linewidth=2.5, linestyle=\"--\", label='Humans')\n",
       "    plot(age, p_badger, marker='^', color='red', label='Badgers',linestyle='None' )\n",
       "    title('My reminder plot')\n",
@@ -375,7 +442,15 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "    plot(age, p_human, linewidth=2.5, linestyle=\"--\", label='Humans')\n",
+      "    plot(age, p_badger, marker='^', color='red', label='Badgers',linestyle='None' )\n",
+      "    title('My reminder plot')\n",
+      "    xlabel('Age')\n",
+      "    ylabel('Power')\n",
+      "    legend()\n",
+      "    show()  "
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -400,51 +475,51 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There are many occasions where we want to plot data on a logarthimic scale. To illustrate this, in the next code cell we define the variable *r_data* with some radioactivity data. Namely the half lives for some radioactive elements and their atomic numbers. "
+      "There are many occasions where we want to plot data on a logarthimic scale. To illustrate this, in the next code cell we define the variable *r_data* with some radioactivity data for the radioactive elements. The first column contains the atomic numbers of the elements and the second column contains the half lives."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "r_data=array([[  43,   1.29928320e+14],\n",
-      "       [  61,   5.59133280e+08],\n",
-      "       [  83,   5.99184000e+26],\n",
-      "       [  84,   3.21982560e+09],\n",
-      "       [  85,   2.90160000e+04],\n",
-      "       [  86,   3.30349968e+05],\n",
-      "       [  87,   1.30200000e+03],\n",
-      "       [  88,   5.01422400e+10],\n",
-      "       [  89,   6.87059064e+08],\n",
-      "       [  90,   4.43396160e+17],\n",
-      "       [  91,   1.03400237e+12],\n",
-      "       [  92,   1.40997456e+17],\n",
-      "       [  93,   6.76604880e+13],\n",
-      "       [  94,   2.50080480e+15],\n",
-      "       [  95,   2.32987968e+11],\n",
-      "       [  96,   4.91961600e+14],\n",
-      "       [  97,   4.34881440e+10],\n",
-      "       [  98,   2.84013216e+10],\n",
-      "       [  99,   4.07508192e+07],\n",
-      "       [  100,   8.68320000e+06],\n",
-      "       [  101,   4.44960000e+06],\n",
-      "       [  102,   1.00080000e+04],\n",
-      "       [  103,   3.60000000e+04],\n",
-      "       [  104,   4.71600000e+04],\n",
-      "       [  105,   2.00160000e+04],\n",
-      "       [  106,   6.98400000e+03],\n",
-      "       [  107,   5.40000000e+03],\n",
-      "       [  108,   3.99600000e+03],\n",
-      "       [  109,   1.80000000e+03],\n",
-      "       [  110,   2.40000000e+02],\n",
-      "       [  111,   6.00000000e+02],\n",
-      "       [  112,   2.40000000e+03],\n",
-      "       [  113,   1.20000000e+03],\n",
-      "       [  114,   7.98000000e+01],\n",
-      "       [  115,   6.00000000e+01],\n",
-      "       [  116,   1.20000000e-01],\n",
-      "       [  117,   5.00000000e-02],\n",
-      "       [  118,   5.00000000e-03]])"
+      "r_data = array([[  43,   1.29928320e+14],\n",
+      "               [  61,   5.59133280e+08],\n",
+      "               [  83,   5.99184000e+26],\n",
+      "               [  84,   3.21982560e+09],\n",
+      "               [  85,   2.90160000e+04],\n",
+      "               [  86,   3.30349968e+05],\n",
+      "               [  87,   1.30200000e+03],\n",
+      "               [  88,   5.01422400e+10],\n",
+      "               [  89,   6.87059064e+08],\n",
+      "               [  90,   4.43396160e+17],\n",
+      "               [  91,   1.03400237e+12],\n",
+      "               [  92,   1.40997456e+17],\n",
+      "               [  93,   6.76604880e+13],\n",
+      "               [  94,   2.50080480e+15],\n",
+      "               [  95,   2.32987968e+11],\n",
+      "               [  96,   4.91961600e+14],\n",
+      "               [  97,   4.34881440e+10],\n",
+      "               [  98,   2.84013216e+10],\n",
+      "               [  99,   4.07508192e+07],\n",
+      "               [  100,   8.68320000e+06],\n",
+      "               [  101,   4.44960000e+06],\n",
+      "               [  102,   1.00080000e+04],\n",
+      "               [  103,   3.60000000e+04],\n",
+      "               [  104,   4.71600000e+04],\n",
+      "               [  105,   2.00160000e+04],\n",
+      "               [  106,   6.98400000e+03],\n",
+      "               [  107,   5.40000000e+03],\n",
+      "               [  108,   3.99600000e+03],\n",
+      "               [  109,   1.80000000e+03],\n",
+      "               [  110,   2.40000000e+02],\n",
+      "               [  111,   6.00000000e+02],\n",
+      "               [  112,   2.40000000e+03],\n",
+      "               [  113,   1.20000000e+03],\n",
+      "               [  114,   7.98000000e+01],\n",
+      "               [  115,   6.00000000e+01],\n",
+      "               [  116,   1.20000000e-01],\n",
+      "               [  117,   5.00000000e-02],\n",
+      "               [  118,   5.00000000e-03]])"
      ],
      "language": "python",
      "metadata": {},
